--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,5 +5,8 @@
 // Variables
 @import "variables";
 
-// Bootstrap
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+// Bulma
+@import "~bulma";
+
+// Font Awesome
+@import "~font-awesome/scss/font-awesome.scss";
